// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`articleDismissed callbacks dispatches expected actions on failed request 1`] = `
Array [
  Object {
    "payload": Object {
      "articleID": 4567,
      "reasonID": 7,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/ARTICLE_DISMISSED_PENDING",
  },
  Object {
    "payload": Object {
      "articleID": 4567,
      "error": undefined,
      "reasonID": 7,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/ARTICLE_DISMISSED_REJECTED",
  },
]
`;

exports[`articleDismissed callbacks dispatches expected actions on successful request 1`] = `
Array [
  Object {
    "payload": Object {
      "articleID": 4567,
      "reasonID": 7,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/ARTICLE_DISMISSED_PENDING",
  },
  Object {
    "payload": Object {
      "articleID": 4567,
      "reasonID": 7,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/ARTICLE_DISMISSED_FULFILLED",
  },
]
`;

exports[`articleDismissed dispatches the expected pending actions 1`] = `
Array [
  Object {
    "payload": Object {
      "articleID": 4567,
      "reasonID": 7,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/ARTICLE_DISMISSED_PENDING",
  },
]
`;

exports[`articleDismissed sends the expected http params 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "callbacks": Object {
          "done": [Function],
          "fail": [Function],
        },
        "method": "post",
        "params": Object {
          "article_id": 4567,
          "deflection_id": 888,
          "interaction_access_token": Object {
            "y": 2,
          },
          "reason_id": 7,
          "resolution_channel_id": 67,
        },
        "path": "/api/v2/answer_bot/rejection",
      },
    ],
  ],
  "results": undefined,
}
`;
